<resources>
    <string name="app_name">TableBooking</string>
    <string name="restaurants">Restaurants</string>
    <string name="bookings">Bookings</string>
    <string name="back">Back</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="number_of_people">Number of People</string>
    <string name="sign_out">sign_out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>