<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#929E93"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_name"
        android:textSize="34sp"
        tools:text="Mill House Cafe" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="34sp"
        tools:text="12/06/24" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="24sp"
        tools:text="16:30" />

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonEdit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="193dp"
            android:layout_height="65dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/butt"
            android:drawableStart="@drawable/ic_launcher_foreground"
            android:text="@string/edit" />

        <Button
            android:id="@+id/buttonDelete"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="186dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:background="@drawable/butt"
            android:drawableStart="@android:drawable/ic_menu_delete"
            android:text="@string/delete" />
    </LinearLayout>
</LinearLayout>

